--- a/css/style.scss
+++ b/css/style.scss
@@ -26,6 +26,7 @@ body{
         color: $base-color;
         width: 10%;
         padding: 0.2% 0.2%;
+        cursor: pointer;
     }
 
     .nav-links{
@@ -40,7 +41,7 @@ body{
         a{
             color: white;
             text-decoration: none;
-            font-size: 1.2vmax;
+            font-size: 1.5vmax;
             font-weight: bold;
             letter-spacing: 2px;
         }
@@ -61,59 +62,10 @@ body{
 
 }
 
-
-@media screen and (max-width: 768px) {
-    body{
-        overflow-x: hidden !important;
-        width: 100%;
-    }
-
-    .nav-links{
-        position: absolute;
-        right: 0;
-        height: 92vh;
-        top: 8vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        transform: translateX(100%);
-        transition: transform 0.5s ease-in;
-    }
-
-    .nav-bar {
-     .nav-links {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-
-        a{
-            font-size: 3.2vmax;
-            line-height: 4rem;
-        }
-    }
-
-    .logo{
-        white-space: nowrap;
-        width: 18%;
-    }
-
-    .burger{
-        display: block;
-    }
-    }
-
-    .nav-links{
-        li{
-            opacity: 0;
-        }
-    }
-
-
-}
-
 .nav-active{
     transform: translateX(0%);
 }
+
 
 @keyframes navLinkFade {
     from{
@@ -141,35 +93,33 @@ body{
 }
 
 
-
-
 // Main Section
-
 .main{
     display: grid;
-    grid-template-columns: 7% 1fr 1.5fr 7%;
+    grid-template-columns: 1fr 1.5fr;
     grid-gap: 50px;
     min-height: 80vh;
     align-items: center;
+    margin: 1% 15%;
 
     .left{
-        grid-column: 2/3;
         align-self: flex-start;
         margin-top: 22%;
         text-align: initial;
 
         h1{
             font-size: 3vmax;
+            font-weight: 200;
             color: $base-color;
         }
-        h3{
+        h6{
             margin-top: 7%;
-            width: 80%;
+            width: 90%;
             font-family: Montserrat;
             font-style: normal;
-            font-weight: 300;
-            font-size: 30px;
-            line-height: 45px;
+            font-weight: lighter;
+            font-size: 1.8vmax;
+            line-height: 2.5vmax;
             color: $base-color;
         }
         p{
@@ -177,8 +127,7 @@ body{
             color: $base-color;
             font-style: normal;
             font-weight: 600;
-            font-size: 24px;
-            line-height: 30px;
+            font-size: 1.5vmax;
         }
     }
 
@@ -186,6 +135,135 @@ body{
         img{
             width: 100%;
         }
+
+        .card-overlay{
+            background: #181719;
+            color: $base-color;
+            max-width: 480px;
+            padding: 2% 2%;
+            position: relative;
+            left: 35%;
+            bottom: 10%;
+
+            h3{
+                margin-top: 4%;
+                font-size: 1.5vmax;
+                font-weight: 200;
+            }
+
+            .card-head{
+                display: flex;
+                align-items: center;
+
+                .card-head-text{
+                    margin-left: 6%;
+                }
+
+                img{
+                    margin-left: 4%;
+                    width: 50px;
+                    border-radius: 50%;
+                }
+            }
+        }
     }
 }
 
+footer{
+    a{
+        text-decoration: none;
+        p{
+            color: $base-color;
+            font-family: 'Montserrat', sans-serif;
+        }
+    }
+
+}
+
+
+
+// Media Query
+
+@media screen and (max-width: 768px) {
+    body{
+        overflow-x: hidden !important;
+        width: 100%;
+    }
+
+    .nav-links{
+        position: absolute;
+        right: 0;
+        height: 92vh;
+        top: 8vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+    }
+
+    .nav-bar {
+        justify-content: space-between;
+        margin: 0 4%;
+
+     .nav-links {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+
+        a{
+            font-size: 3.2vmax;
+            line-height: 4rem;
+        }
+    }
+
+    .logo{
+        white-space: nowrap;
+        width: 18%;
+        padding: 1% 0.5%;
+    }
+
+    .burger{
+        display: block;
+    }
+
+    .nav-links{
+        width: 0%;
+        right: 50%;
+
+        li{
+            opacity: 0;
+        }
+    }
+    }
+
+
+
+    // Main Section
+
+    .main{
+        display: block;
+        margin: 0 3%;
+
+    .left{
+        align-self: flex-start;
+        margin-top: 8%;
+
+        p{
+            margin: 5% 0 10% 0;
+        }
+    }
+
+    .right{
+        .card-overlay{
+            max-width: 300px;;
+            left: 7%;
+            bottom: 5vh;
+        }
+    }
+    
+
+    }
+
+
+}
